blocks/columns/columns-styles/featured-columns.css
@import url(../../../blocks/product-main-brand-showcase/product-main-brand-showcase.css);
@import url(../../../blocks/product-brand-showcase/product-brand-showcase.css);

/* Featured Brand (Balenciaga) */
.divider-border-grid,
.build-product-block {
  display: flex;
  margin: auto 0;
}

/* Main Image wrapper */
.divider-border-grid .product-main-brand-showcase-wrapper,
.divider-border-grid .product-main-brand-showcase-mirror-wrapper,
.build-product-block .product-main-brand-showcase-wrapper,
.build-product-block .product-main-brand-showcase-mirror-wrapper {
  display: flex;
  margin: auto;
  margin-top: 0;
  max-width: fit-content;
  flex: 1.5;
  width: 100%;
}

.divider-border-grid .product-main-brand-showcase-mirror-wrapper {
  margin-left: 2%;
}

.divider-border-grid .product-main-brand-showcase-wrapper,
.build-product-block .product-main-brand-showcase-wrapper,
.build-product-block .product-main-brand-showcase-mirror-wrapper {
  margin-right: 2%;
}

/* Products wrapper */
.divider-border-grid .product-brand-showcase-wrapper,
.divider-border-grid .product-brand-showcase-mirror-wrapper,
.build-product-block .product-brand-showcase-wrapper,
.build-product-block .product-brand-showcase-mirror-wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr;
  height: auto;
  margin: auto;
  gap: 20px;
  max-width: fit-content;
  margin-bottom: 0%;
  flex: 1;
}
/* Products wrapper */
.divider-border-grid .product-brand-showcase-wrapper,
.build-product-block .product-brand-showcase-wrapper {
  margin-left: 0%;
}

.divider-border-grid .product-brand-showcase-mirror-wrapper,
.build-product-block .product-brand-showcase-mirror-wrapper {
  margin-right: 0%;
}

.divider-border-grid .product-main-brand-showcase-wrapper .product,
.divider-border-grid .product-main-brand-showcase-mirror-wrapper .product,
.build-product-block .product-main-brand-showcase-wrapper,
.build-product-block .product-main-brand-showcase-mirror-wrapper {
  flex: 1.5;
}

.divider-border-grid .product-brand-showcase-wrapper .product,
.divider-border-grid .product-brand-showcase-mirror-wrapper .product,
.build-product-block .product-brand-showcase-wrapper,
.build-product-block .product-brand-showcase-mirror-wrapper {
  flex: 1;
}

/* Balenciaga Columns */
.product-main-brand-showcase,
.product-brand-showcase,
.product-main-brand-showcase-mirror,
.product-brand-showcase-mirror {
  display: flex;
}

/* Shop Now > button */
.product-main-brand-showcase-mirror .btn-on-img p,
.product-main-brand-showcase .btn-on-img p {
  margin: auto;
  padding: 0;
  bottom: 0;
}

.product-main-brand-showcase .btn-on-img p,
.product-main-brand-showcase-mirror .btn-on-img p {
  display: flex;
  position: absolute;
  align-self: flex-end;
  right: 0;
  background-color: white;
  text-transform: uppercase;
  opacity: 1;
  transition: opacity 0.3s ease;
}

.product-main-brand-showcase .btn-on-img:hover,
.product-main-brand-showcase-mirror .btn-on-img:hover {
  opacity: 0.5;
}

.product-main-brand-showcase .btn-on-img a:hover,
.product-main-brand-showcase-mirror .btn-on-img a:hover {
  text-decoration: none;
}

.product-main-brand-showcase .btn-on-img p a,
.product-main-brand-showcase-mirror .btn-on-img p a {
  display: flex;
  border: none;
  border-radius: 0;
  color: var(--main-text-color);
  font-size: var(--sub-text-secondary-size);
  padding: auto;
  font-weight: 500;
}

/* End Shop Now > button */
/* Mirror Main Image wrapper */
.divider-border-grid .product-brand-showcase-mirror-wrapper {
  order: 1;
}

/* Products wrapper */
.divider-border-grid .product-main-brand-showcase-mirror-wrapper {
  order: 2;
}

